tests/syntax_error/import_with_extra_crap_at_end.jou
import "stdlib/io.jou" lol  # Error: expected end of line, got a variable name 'lol'
